--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5678
-MONGO=mongodb+srv://pandadumdum2022:Xinyu0727@atlascluster.rlt7gq0.mongodb.net/project2?retryWrites=true&w=majority
+MONGO=touch
