made connection to mongo DB

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5678
-MONGO=touch
+DATABASE_URL=mongodb+srv://pandadumdum2022:Xinyu0727@atlascluster.rlt7gq0.mongodb.net/habits?retryWrites=true&w=majority
