--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5678
 DATABASE_URL='mongodb+srv://pandadumdum2022:Xinyu0727@atlascluster.rlt7gq0.mongodb.net/habits?retryWrites=true&w=majority'
+SECRET=12345
