--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pomodoro-node": "^1.0.6"
   }
 }
